changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

lib/crossfire.png: ground/sea*png - remove transperancies from png images
since they should not be transparent.  MSW 8/23/2000

doc/spoiler.html/(Makefile.in,empty.pbm, makeps.pl, spoiler.html):  Modify
to make gif images from png source instead of xpm images.  A valid question
to ask is why convert to gif at all and not just keep in PNG format.  The
answer right now is that png support in netscape at least still is not very
good, and it displays gifs better.  MSW 8/8/2000

Add/Remove some LOG calls:
common/living.c:  Remove log messages about gen_sp values on armor
server/login.c, server/main.c: Add messages about player logins/logouts with
IP address.  Useful for tracking potentially troublesome players and where
they are player from.  MSW 8/7/2000

The following change basically does the following:  When the server sends an
item name to the client, this item name is now two pieces - the first piece
of the name is its singular form, the second piece is the plural name.  This
now makes items in the inventory appear more proper in terms of pluralization
and just normal English.  I did notice that the server does not know how
to properly make 'torch' plural - it turns it into torchs.  A matching
check in for the client has also been done.
include/newserver.h:  Update VERSION_SC to 1024
common/item.c: Change query_base_name to take a second option on whether
  we should generate a plural version of the name or not.
socket/item.c: Modify functions to use second argument on the query_base_name
  function.  Update item commands to send two part names (singular & plural).